[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Item.gd" type="Script" id=1]
[ext_resource path="res://Assets/Items/JewelBox.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 82.866, 130.322 )

[node name="Item" type="Area2D"]
gravity = 0.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "E"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingBar" type="ColorRect" parent="."]
margin_left = -45.5768
margin_top = -87.8139
margin_right = 54.4232
margin_bottom = -85.8139
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fill" type="ColorRect" parent="."]
margin_left = -45.5768
margin_top = -87.8139
margin_right = -45.5768
margin_bottom = -85.8139
color = Color( 0.580392, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_Item_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Item_body_exited"]
